prusti/tests/pass/parse/composite_fail.stderr
error: found `||` and `&&` in the same subexpression
  --> $DIR/composite_fail.rs:10:17
   |
10 | #[requires(true && true || true)]
   |                 ^^^^^^^^^^

error: expected `&&` or `==>`
  --> $DIR/composite_fail.rs:13:36
   |
13 | #[requires(forall(|a: i32| a == 5) || forall(|a: i32| a == 5))]
   |                                    ^^

error: aborting due to 2 previous errors

